--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "publish-font-packages": "yarn workspace generator publish-font-packages",
     "generate-root-readme": "yarn workspace generator generate-root-readme",
     "update-directory-data": "yarn workspace generator update-directory-data",
+    "sync-packages": "yarn workspace generator sync-packages",
     "lint": "eslint ."
   },
   "workspaces": [
