--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -23,6 +23,7 @@
     "physical-cpu-count": "^2.0.0",
     "prettier": "^2.0.5",
     "protocol-buffers": "^4.1.2",
+    "semver": "^7.7.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   },
