--- a/package.json
+++ b/package.json
@@ -5,13 +5,9 @@
   "author": "Expo",
   "license": "MIT",
   "scripts": {
-    "build": "yarn workspace generator generate",
-    "build-packages": "yarn workspace generator generate-packages;",
-    "build-images": "yarn workspace generator generate-images",
-    "publish-font-packages": "yarn workspace generator publish-font-packages",
-    "generate-root-readme": "yarn workspace generator generate-root-readme",
-    "update-directory-data": "yarn workspace generator update-directory-data",
+    "regenerate-all": "yarn workspace generator regenerate-all",
     "sync-packages": "yarn workspace generator sync-packages",
+    "generate-root-readme": "yarn workspace generator generate-root-readme",
     "lint": "eslint ."
   },
   "workspaces": [
