--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -27,4 +27,4 @@ jobs:
         run: yarn install --frozen-lockfile
 
       - name: Run lint
-        run: yarn lint
+        run: yarn lint --max-warnings=0
