--- a/packages/generator/src/templates/package/package.json
+++ b/packages/generator/src/templates/package/package.json
@@ -5,12 +5,12 @@
   "main": "<%= main %>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/expo/google-fonts.git",
+    "url": "git+https://github.com/expo/google-fonts.git",
     "directory": "<%= directory %>"
   },
   "homepage": "https://github.com/expo/google-fonts/tree/master/font-packages/<%= packageName %>#readme",
   "author": "Expo Team <team@expo.io>",
-  "license": "MIT",
+  "license": "<%= license %>",
   "publishConfig": {
     "access": "public"
   }
